# input-daemon

./: Cargo.toml  README.md
aux/dbus-1/system-services/: be.samvervaeck.InputDaemon.service
aux/dbus-1/system.d/: be.samvervaeck.InputDaemon.conf
aux/polkit-1/actions/: be.samvervaeck.InputDaemon.policy
src/: client.rs  lib.rs  server.rs
